...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/LogoutUser"
            android:background="@drawable/editbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"

            />
...
